<resources>
    <string name="app_name">Atividade1</string>
    <string name="imageView">imageView</string>
    <string name="dashboard">Dashboard</string>
    <string name="logoLogin">LogoLogin</string>
    <string name="buttonLogin">ButtonLogin</string>

    <!-- LoginActivity -->

    <string name="hint_email">E-mail</string>
    <string name="hint_password">Senha</string>

    <string name="button_arraylist">Button ArrayList</string>
    <string name="btnlogin">btnLogin</string>
    <string name="button">Button</string>
    <string name="add">Add</string>
    <string name="addEdit">addEdit</string>
    <string name="button_autocomplet">Button AutoComplet</string>
    <string name="title_activity_spinner">Spinner</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="button_spinner">button spinner</string>
    <string name="button_radio">Button Radio</string>
    <string name="ps2">PS2</string>
    <string name="ps3">PS3</string>
    <string name="xbox">Xbox</string>
    <string name="voc_selecionou">Você selecionou:</string>
    <string name="xbox_one">Xbox One</string>
    <string name="enviar">Enviar</string>
    <string name="click_na_lua">Click na Lua</string>
    <string name="button_toogle">Button Toogle</string>
    <string name="button_menu_popup">Button Menu PopUp</string>
    <string name="clique_aqui">Clique aqui</string>
    <string name="button_long_press">Button Long Press</string>

    <!--String array spinner -->
    <string-array name="video_game">
        <item>Xbox One</item>
        <item>PS2</item>
        <item>PS3</item>
        <item>Xbox 360</item>
        <item>PS4</item>
    </string-array>


</resources>