<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RadioButt">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="105dp"
        android:layout_height="156dp"
        android:layout_centerInParent="true">

        <RadioButton
            android:id="@+id/radio_xbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="checkButton"
            android:text="@string/xbox_one" />

        <RadioButton
            android:id="@+id/radio_ps2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkButton"
            android:text="@string/ps2" />

        <RadioButton
            android:id="@+id/radio_ps3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkButton"
            android:text="@string/ps3" />

        <RadioButton
            android:id="@+id/radio_xbxx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkButton"
            android:text="@string/xbox" />

    </RadioGroup>

    <TextView
        android:id="@+id/text_view_selected"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="129dp"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="173dp"
        android:text="@string/voc_selecionou"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_enviar"
        android:layout_width="180dp"
        android:layout_height="85dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="125dp"
        android:layout_marginTop="463dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="55dp"
        android:text="@string/enviar" />
</RelativeLayout>